feat: add unspent arb tokens

--- a/notebooks/arb_distribution.ipynb
+++ b/notebooks/arb_distribution.ipynb
@@ -93,8 +93,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 84,
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unspent ARB: 27823.526636649927\n"
+     ]
+    },
     {
      "data": {
       "text/plain": "<IPython.core.display.HTML object>",
@@ -127,7 +134,8 @@
     "        'distribution': to_distribute if to_distribute < VOTE_CAP else VOTE_CAP,\n",
     "        'distributionInPercent': to_distribute / ARBITRUM_TO_DISTRIBUTE * 100\n",
     "    }\n",
-    "\n",
+    "unspent_arb = ARBITRUM_TO_DISTRIBUTE - sum([gauge['distribution'] for gauge in arb_gauge_distributions.values()])\n",
+    "print(f\"Unspent ARB: {unspent_arb}\")\n",
     "arb_gauge_distributions_df = pd.DataFrame.from_dict(arb_gauge_distributions, orient='index')\n",
     "arb_gauge_distributions_df = arb_gauge_distributions_df.sort_values(by='distribution', ascending=False)\n",
     "display(HTML(arb_gauge_distributions_df.to_html(index=False)))"
@@ -135,8 +143,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-26T13:21:36.383482Z",
-     "start_time": "2023-07-26T13:21:36.373947Z"
+     "end_time": "2023-07-26T13:23:45.912892Z",
+     "start_time": "2023-07-26T13:23:45.853100Z"
     }
    }
   }
