feat: redistribute remaining arb

--- a/notebooks/arb_distribution.ipynb
+++ b/notebooks/arb_distribution.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 63,
    "outputs": [],
    "source": [
     "import os\n",
@@ -77,8 +77,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-26T13:21:36.352011Z",
-     "start_time": "2023-07-26T13:21:30.165321Z"
+     "end_time": "2023-07-26T14:40:31.625565Z",
+     "start_time": "2023-07-26T14:40:25.375296Z"
     }
    }
   },
@@ -93,26 +93,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 67,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Unspent ARB: 27823.526636649927\n"
+      "Unspent arb: 0.0\n",
+      "Arb distributed: 97404.0\n"
      ]
     },
     {
      "data": {
       "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th>gaugeAddress</th>\n      <th>pool</th>\n      <th>symbol</th>\n      <th>voteWeight</th>\n      <th>distribution</th>\n      <th>distributionInPercent</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>0x8135d6AbFd42707A87A7b94c5CFA3529f9b432AD</td>\n      <td>0x32dF62dc3aEd2cD6224193052Ce665DC18165841</td>\n      <td>RDNT-WETH</td>\n      <td>0.821489</td>\n      <td>9740.400000</td>\n      <td>10.000000</td>\n    </tr>\n    <tr>\n      <td>0x4944b07977A42C15c6a06CF4e204e24c60564104</td>\n      <td>0xCba9Ff45cfB9cE238AfDE32b0148Eb82CbE63562</td>\n      <td>rETH-bb-a-WETH-BPT</td>\n      <td>0.454235</td>\n      <td>9740.400000</td>\n      <td>10.000000</td>\n    </tr>\n    <tr>\n      <td>0xa8D974288Fe44ACC329D7d7a179707D27Ec4dd1c</td>\n      <td>0xc9f52540976385A84BF416903e1Ca3983c539E34</td>\n      <td>50tBTC-50WETH</td>\n      <td>0.474528</td>\n      <td>9740.400000</td>\n      <td>10.000000</td>\n    </tr>\n    <tr>\n      <td>0xDf464348c4EC2Bf0e5D6926b9f707c8e02301adf</td>\n      <td>0x36bf227d6BaC96e2aB1EbB5492ECec69C691943f</td>\n      <td>B-wstETH-WETH-Stable</td>\n      <td>0.937519</td>\n      <td>9740.400000</td>\n      <td>10.000000</td>\n    </tr>\n    <tr>\n      <td>0x175407b4710b5A1cB67a37C76859F17fb2ff6672</td>\n      <td>0xc7FA3A3527435720f0e2a4c1378335324dd4F9b3</td>\n      <td>55auraBal-45wsteth</td>\n      <td>0.777957</td>\n      <td>9740.400000</td>\n      <td>10.000000</td>\n    </tr>\n    <tr>\n      <td>0xc4b6cc9A444337b1Cb8cBbDD9de4d983f609C391</td>\n      <td>0x542F16DA0efB162D20bF4358EfA095B70A100f9E</td>\n      <td>2BTC</td>\n      <td>0.233378</td>\n      <td>5153.140280</td>\n      <td>5.290481</td>\n    </tr>\n    <tr>\n      <td>0x25869f277f474FA9459F40F5D4cB0D6A8Ab41967</td>\n      <td>0x8bc65Eed474D1A00555825c91FeAb6A8255C2107</td>\n      <td>DOLA/USDC BPT</td>\n      <td>0.210626</td>\n      <td>4650.759897</td>\n      <td>4.774711</td>\n    </tr>\n    <tr>\n      <td>0xacE0D479040231e3c6b17479cFd4444182d521d4</td>\n      <td>0x567ECfCB22205D279BB8Eed3E066989902bF03D5</td>\n      <td>DOLA/bbaUSD-BPT</td>\n      <td>0.210626</td>\n      <td>4650.759897</td>\n      <td>4.774711</td>\n    </tr>\n    <tr>\n      <td>0x0EDF6cDd81BC3471C053341B7D8Dfd1Cb367AD93</td>\n      <td>0xb3028Ca124B80CFE6E9CA57B70eF2F0CCC41eBd4</td>\n      <td>50MAGIC-50USDC</td>\n      <td>0.183482</td>\n      <td>4051.398147</td>\n      <td>4.159376</td>\n    </tr>\n    <tr>\n      <td>0xd758454BDF4Df7Ad85f7538DC9742648EF8e6d0A</td>\n      <td>0x8d333f82e0693f53fA48c40d5D4547142E907e1D</td>\n      <td>80PAL-20OHM</td>\n      <td>0.091146</td>\n      <td>2012.556269</td>\n      <td>2.066195</td>\n    </tr>\n    <tr>\n      <td>0xB5044FD339A7b858095324cC3F239C212956C179</td>\n      <td>0x5A7f39435fD9c381e4932fa2047C9a5136A5E3E7</td>\n      <td>wstETH-bb-a-WETH-BPT</td>\n      <td>0.016297</td>\n      <td>359.858873</td>\n      <td>0.369450</td>\n    </tr>\n    <tr>\n      <td>0xCe540832f7c790d25345Aa19FB1Db3cfDEA04611</td>\n      <td>0xfA92D9Dd808D0E8D68079BDc7f01E74658E1EF15</td>\n      <td>alETH/rETH-BPT</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <td>0xCe3a024bAF36C91d315722B093928020a4F56622</td>\n      <td>0x00FCD3d55085e998e291a0005cedeCF58aC14c40</td>\n      <td>50STG-50bbaUSD</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <td>0x9ab40B6e1330Ce70B9e07cD691f281c1539944E6</td>\n      <td>0xc6EeE8cb7643eC2F05F46d569e9eC8EF8b41b389</td>\n      <td>bb-a-USD</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <td>0x80aed5C5C683FEC86817C98da334DD72424E7297</td>\n      <td>0x45C4D1376943Ab28802B995aCfFC04903Eb5223f</td>\n      <td>wstETH-bb-a-WETH-BPT</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <td>0xb12ADA23eE766bd6b596E2bE556ea2046758b87c</td>\n      <td>0xBe0f30217BE1e981aDD883848D0773A86d2d2CD4</td>\n      <td>rETH-bb-a-WETH-BPT</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <td>0x6ba66967B0723718d616ad5F293c2AE6d7b0FCAE</td>\n      <td>0xCE2Da1D3e5b5e4E1913F9fF65eE029d38682d8b9</td>\n      <td>B-50ACID-50WETH</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <td>0xD2C2b1C0F8Ad6E653eD7064fa7bAd7a22De8B249</td>\n      <td>0x26e5C5e2b48815b59640a1a82ac3C2249188Daf4</td>\n      <td>alETH/wstETH-BPT</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <td>0x8F7a0F9cf545DB78BF5120D3DBea7DE9c6220c10</td>\n      <td>0xa231aEa07Bb5e79aE162f95903806FC5AD65fF11</td>\n      <td>50DFX-50WETH</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <td>0x8204b749B808818DEb7957DbD030ceEA44D1FE18</td>\n      <td>0xD3D5d45f4Edf82ba0dFaf061d230766032a10e07</td>\n      <td>50STG-50bbaUSD</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <td>0x54BeFB03BB58687cDE09cd082Bd78410e309D8C7</td>\n      <td>0xEE02583596AEE94ccCB7e8ccd3921d955f17982A</td>\n      <td>bb-a-USD</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <td>0xBc771929359B1A6386801705e8D185205d8f1CBF</td>\n      <td>0xbBF9d705b75F408CFCaEE91dA32966124d2c6F7D</td>\n      <td>DOLA/bbaUSD-BPT</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n  </tbody>\n</table>"
+      "text/html": "<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th>gaugeAddress</th>\n      <th>pool</th>\n      <th>symbol</th>\n      <th>voteWeight</th>\n      <th>distribution</th>\n      <th>distributionInPercent</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>0xDf464348c4EC2Bf0e5D6926b9f707c8e02301adf</td>\n      <td>0x36bf227d6BaC96e2aB1EbB5492ECec69C691943f</td>\n      <td>B-wstETH-WETH-Stable</td>\n      <td>0.937519</td>\n      <td>9740.400000</td>\n      <td>10.000000</td>\n    </tr>\n    <tr>\n      <td>0x8135d6AbFd42707A87A7b94c5CFA3529f9b432AD</td>\n      <td>0x32dF62dc3aEd2cD6224193052Ce665DC18165841</td>\n      <td>RDNT-WETH</td>\n      <td>0.821489</td>\n      <td>9740.400000</td>\n      <td>10.000000</td>\n    </tr>\n    <tr>\n      <td>0x175407b4710b5A1cB67a37C76859F17fb2ff6672</td>\n      <td>0xc7FA3A3527435720f0e2a4c1378335324dd4F9b3</td>\n      <td>55auraBal-45wsteth</td>\n      <td>0.777957</td>\n      <td>9740.400000</td>\n      <td>10.000000</td>\n    </tr>\n    <tr>\n      <td>0xa8D974288Fe44ACC329D7d7a179707D27Ec4dd1c</td>\n      <td>0xc9f52540976385A84BF416903e1Ca3983c539E34</td>\n      <td>50tBTC-50WETH</td>\n      <td>0.474528</td>\n      <td>9740.400000</td>\n      <td>10.000000</td>\n    </tr>\n    <tr>\n      <td>0x4944b07977A42C15c6a06CF4e204e24c60564104</td>\n      <td>0xCba9Ff45cfB9cE238AfDE32b0148Eb82CbE63562</td>\n      <td>rETH-bb-a-WETH-BPT</td>\n      <td>0.454235</td>\n      <td>9740.400000</td>\n      <td>10.000000</td>\n    </tr>\n    <tr>\n      <td>0xc4b6cc9A444337b1Cb8cBbDD9de4d983f609C391</td>\n      <td>0x542F16DA0efB162D20bF4358EfA095B70A100f9E</td>\n      <td>2BTC</td>\n      <td>0.233378</td>\n      <td>9740.400000</td>\n      <td>10.000000</td>\n    </tr>\n    <tr>\n      <td>0x25869f277f474FA9459F40F5D4cB0D6A8Ab41967</td>\n      <td>0x8bc65Eed474D1A00555825c91FeAb6A8255C2107</td>\n      <td>DOLA/USDC BPT</td>\n      <td>0.210626</td>\n      <td>9740.400000</td>\n      <td>10.000000</td>\n    </tr>\n    <tr>\n      <td>0xacE0D479040231e3c6b17479cFd4444182d521d4</td>\n      <td>0x567ECfCB22205D279BB8Eed3E066989902bF03D5</td>\n      <td>DOLA/bbaUSD-BPT</td>\n      <td>0.210626</td>\n      <td>9740.400000</td>\n      <td>10.000000</td>\n    </tr>\n    <tr>\n      <td>0x0EDF6cDd81BC3471C053341B7D8Dfd1Cb367AD93</td>\n      <td>0xb3028Ca124B80CFE6E9CA57B70eF2F0CCC41eBd4</td>\n      <td>50MAGIC-50USDC</td>\n      <td>0.183482</td>\n      <td>9740.400000</td>\n      <td>10.000000</td>\n    </tr>\n    <tr>\n      <td>0xd758454BDF4Df7Ad85f7538DC9742648EF8e6d0A</td>\n      <td>0x8d333f82e0693f53fA48c40d5D4547142E907e1D</td>\n      <td>80PAL-20OHM</td>\n      <td>0.091146</td>\n      <td>8120.208441</td>\n      <td>8.336627</td>\n    </tr>\n    <tr>\n      <td>0xB5044FD339A7b858095324cC3F239C212956C179</td>\n      <td>0x5A7f39435fD9c381e4932fa2047C9a5136A5E3E7</td>\n      <td>wstETH-bb-a-WETH-BPT</td>\n      <td>0.016297</td>\n      <td>1620.191559</td>\n      <td>1.663373</td>\n    </tr>\n    <tr>\n      <td>0xCe540832f7c790d25345Aa19FB1Db3cfDEA04611</td>\n      <td>0xfA92D9Dd808D0E8D68079BDc7f01E74658E1EF15</td>\n      <td>alETH/rETH-BPT</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <td>0xCe3a024bAF36C91d315722B093928020a4F56622</td>\n      <td>0x00FCD3d55085e998e291a0005cedeCF58aC14c40</td>\n      <td>50STG-50bbaUSD</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <td>0x9ab40B6e1330Ce70B9e07cD691f281c1539944E6</td>\n      <td>0xc6EeE8cb7643eC2F05F46d569e9eC8EF8b41b389</td>\n      <td>bb-a-USD</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <td>0x80aed5C5C683FEC86817C98da334DD72424E7297</td>\n      <td>0x45C4D1376943Ab28802B995aCfFC04903Eb5223f</td>\n      <td>wstETH-bb-a-WETH-BPT</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <td>0xb12ADA23eE766bd6b596E2bE556ea2046758b87c</td>\n      <td>0xBe0f30217BE1e981aDD883848D0773A86d2d2CD4</td>\n      <td>rETH-bb-a-WETH-BPT</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <td>0x6ba66967B0723718d616ad5F293c2AE6d7b0FCAE</td>\n      <td>0xCE2Da1D3e5b5e4E1913F9fF65eE029d38682d8b9</td>\n      <td>B-50ACID-50WETH</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <td>0xD2C2b1C0F8Ad6E653eD7064fa7bAd7a22De8B249</td>\n      <td>0x26e5C5e2b48815b59640a1a82ac3C2249188Daf4</td>\n      <td>alETH/wstETH-BPT</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <td>0x8F7a0F9cf545DB78BF5120D3DBea7DE9c6220c10</td>\n      <td>0xa231aEa07Bb5e79aE162f95903806FC5AD65fF11</td>\n      <td>50DFX-50WETH</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <td>0x8204b749B808818DEb7957DbD030ceEA44D1FE18</td>\n      <td>0xD3D5d45f4Edf82ba0dFaf061d230766032a10e07</td>\n      <td>50STG-50bbaUSD</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <td>0x54BeFB03BB58687cDE09cd082Bd78410e309D8C7</td>\n      <td>0xEE02583596AEE94ccCB7e8ccd3921d955f17982A</td>\n      <td>bb-a-USD</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <td>0xBc771929359B1A6386801705e8D185205d8f1CBF</td>\n      <td>0xbBF9d705b75F408CFCaEE91dA32966124d2c6F7D</td>\n      <td>DOLA/bbaUSD-BPT</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n  </tbody>\n</table>"
      },
      "metadata": {},
      "output_type": "display_data"
     }
    ],
    "source": [
-    "from copy import deepcopy\n",
     "from IPython.core.display import HTML\n",
     "import pandas as pd\n",
     "ARBITRUM_TO_DISTRIBUTE = 97404\n",
@@ -134,17 +134,41 @@
     "        'distribution': to_distribute if to_distribute < VOTE_CAP else VOTE_CAP,\n",
     "        'distributionInPercent': to_distribute / ARBITRUM_TO_DISTRIBUTE * 100\n",
     "    }\n",
-    "unspent_arb = ARBITRUM_TO_DISTRIBUTE - sum([gauge['distribution'] for gauge in arb_gauge_distributions.values()])\n",
-    "print(f\"Unspent ARB: {unspent_arb}\")\n",
+    "\n",
+    "# Spend unspent arb on the gauges that are not capped yet\n",
+    "def recur_distribute_unspend_arb():\n",
+    "    unspent_arb = ARBITRUM_TO_DISTRIBUTE - sum([gauge['distribution'] for gauge in arb_gauge_distributions.values()])\n",
+    "    if unspent_arb > 0:\n",
+    "        # Find out total voting weight of uncapped gauges and mark it as 100%:\n",
+    "        total_uncapped_weight = sum(\n",
+    "            [g['voteWeight'] for g in [\n",
+    "                gauge for gauge in arb_gauge_distributions.values() if gauge['distribution'] < VOTE_CAP]\n",
+    "             ]\n",
+    "        )\n",
+    "        # Iterate over uncapped gauges and distribute unspent arb proportionally to their voting weight which is total uncapped weight\n",
+    "        for uncap_gauge in [gauge for gauge in arb_gauge_distributions.values() if gauge['distribution'] < VOTE_CAP]:\n",
+    "            # For each loop calculate unspend arb\n",
+    "            unspent_arb = ARBITRUM_TO_DISTRIBUTE - sum([gauge['distribution'] for gauge in arb_gauge_distributions.values()])\n",
+    "            # Don't distribute more than vote cap\n",
+    "            distribution = min(uncap_gauge['distribution'] + unspent_arb * uncap_gauge['voteWeight'] / total_uncapped_weight, VOTE_CAP)\n",
+    "            uncap_gauge['distribution'] = distribution\n",
+    "            uncap_gauge['distributionInPercent'] = uncap_gauge['distribution'] / ARBITRUM_TO_DISTRIBUTE * 100\n",
+    "    # Call recursively if there is still unspent arb\n",
+    "    if ARBITRUM_TO_DISTRIBUTE - sum([g['distribution'] for g in arb_gauge_distributions.values()]) > 0:\n",
+    "        recur_distribute_unspend_arb()\n",
+    "\n",
+    "recur_distribute_unspend_arb()\n",
+    "print(f\"Unspent arb: {ARBITRUM_TO_DISTRIBUTE - sum([gauge['distribution'] for gauge in arb_gauge_distributions.values()])}\")\n",
+    "print(f\"Arb distributed: {sum([gauge['distribution'] for gauge in arb_gauge_distributions.values()])}\")\n",
     "arb_gauge_distributions_df = pd.DataFrame.from_dict(arb_gauge_distributions, orient='index')\n",
-    "arb_gauge_distributions_df = arb_gauge_distributions_df.sort_values(by='distribution', ascending=False)\n",
+    "arb_gauge_distributions_df = arb_gauge_distributions_df.sort_values(by='voteWeight', ascending=False)\n",
     "display(HTML(arb_gauge_distributions_df.to_html(index=False)))"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-26T13:23:45.912892Z",
-     "start_time": "2023-07-26T13:23:45.853100Z"
+     "end_time": "2023-07-26T14:40:54.321526Z",
+     "start_time": "2023-07-26T14:40:54.314983Z"
     }
    }
   }
