--- a/notebooks/arb_distribution.ipynb
+++ b/notebooks/arb_distribution.ipynb
@@ -11,17 +11,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "outputs": [],
    "source": [
     "import json\n",
     "import os\n",
-    "from typing import Optional\n",
     "\n",
     "import requests\n",
     "from dotenv import load_dotenv\n",
-    "from gql import Client\n",
-    "from gql.transport.requests import RequestsHTTPTransport\n",
     "from web3 import Web3\n",
     "\n",
     "load_dotenv()\n",
@@ -37,16 +34,6 @@
     "                                  \"outputs\": [{\"name\": \"\", \"type\": \"uint256\"}]}]\n",
     "\n",
     "web3 = Web3(Web3.HTTPProvider(os.environ[\"ETHNODEURL\"]))\n",
-    "\n",
-    "\n",
-    "def make_gql_client(url: str) -> Optional[Client]:\n",
-    "    transport = RequestsHTTPTransport(url=url, retries=3)\n",
-    "    return Client(\n",
-    "        transport=transport, fetch_schema_from_transport=True, execute_timeout=60\n",
-    "    )\n",
-    "\n",
-    "\n",
-    "client = make_gql_client(BALANCER_GAUGE_URL)\n",
     "\n",
     "# Fetch all voting gauges from github json\n",
     "voting_gauges_req = requests.get(\n",
@@ -68,25 +55,29 @@
     "\n",
     "gauge_c_contract = web3.eth.contract(address=BALANCER_GAUGE_CONTROLLER_ADDR, abi=BALANCER_GAUGE_CONTROLLER_ABI)\n",
     "\n",
-    "vote_weights = {}\n",
+    "boost_data = {}\n",
+    "cap_override_data = {}\n",
     "# Before, load boost data from the file\n",
     "with open('../data/arbitrumGrantGuageMetadata.json') as f:\n",
-    "    boost_data = json.load(f)\n",
+    "    boosties = json.load(f)\n",
+    "    for boost in boosties:\n",
+    "        boost_data[boost['gaugeAddress']] = boost.get('fixedBoost', 1)\n",
+    "        cap_override_data[boost['gaugeAddress']] = boost.get('capOverride', 10)\n",
+    "\n",
+    "vote_weights = {}\n",
     "# Collect gauge voting weights from the gauge controller on chain\n",
     "for gauge_addr, gauge_data in arb_gauges.items():\n",
     "    weight = gauge_c_contract.functions.gauge_relative_weight(gauge_addr).call() / 1e18 * 100\n",
-    "    # Boost weight if gauge is boosted\n",
-    "    for boost in boost_data:\n",
-    "        if Web3.toChecksumAddress(boost['gaugeAddress']) == Web3.toChecksumAddress(gauge_addr):\n",
-    "            weight *= boost['fixedBoost']\n",
+    "    # Boost weight if gauge is boosted, if not boosted, use 1 as multiplier (no boost)\n",
+    "    weight *= boost_data.get(gauge_addr, 1)\n",
     "    vote_weights[gauge_addr] = weight\n",
     "    arb_gauges[gauge_addr]['voteWeight'] = weight"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-28T11:45:32.277533Z",
-     "start_time": "2023-07-28T11:45:26.693350Z"
+     "end_time": "2023-07-28T12:12:15.992831Z",
+     "start_time": "2023-07-28T12:12:09.998462Z"
     }
    }
   },
@@ -101,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "outputs": [
     {
      "name": "stdout",
@@ -114,7 +105,7 @@
     {
      "data": {
       "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th>gaugeAddress</th>\n      <th>pool</th>\n      <th>symbol</th>\n      <th>voteWeight</th>\n      <th>distribution</th>\n      <th>distributionInPercent</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>0xDf464348c4EC2Bf0e5D6926b9f707c8e02301adf</td>\n      <td>0x36bf227d6BaC96e2aB1EbB5492ECec69C691943f</td>\n      <td>B-wstETH-WETH-Stable</td>\n      <td>0.966584</td>\n      <td>9740.400000</td>\n      <td>10.000000</td>\n    </tr>\n    <tr>\n      <td>0x8135d6AbFd42707A87A7b94c5CFA3529f9b432AD</td>\n      <td>0x32dF62dc3aEd2cD6224193052Ce665DC18165841</td>\n      <td>RDNT-WETH</td>\n      <td>0.934983</td>\n      <td>9740.400000</td>\n      <td>10.000000</td>\n    </tr>\n    <tr>\n      <td>0x175407b4710b5A1cB67a37C76859F17fb2ff6672</td>\n      <td>0xc7FA3A3527435720f0e2a4c1378335324dd4F9b3</td>\n      <td>55auraBal-45wsteth</td>\n      <td>0.796273</td>\n      <td>9740.400000</td>\n      <td>10.000000</td>\n    </tr>\n    <tr>\n      <td>0x9ab40B6e1330Ce70B9e07cD691f281c1539944E6</td>\n      <td>0xc6EeE8cb7643eC2F05F46d569e9eC8EF8b41b389</td>\n      <td>bb-a-USD</td>\n      <td>0.697010</td>\n      <td>9740.400000</td>\n      <td>10.000000</td>\n    </tr>\n    <tr>\n      <td>0xb12ADA23eE766bd6b596E2bE556ea2046758b87c</td>\n      <td>0xBe0f30217BE1e981aDD883848D0773A86d2d2CD4</td>\n      <td>rETH-bb-a-WETH-BPT</td>\n      <td>0.583391</td>\n      <td>9740.400000</td>\n      <td>10.000000</td>\n    </tr>\n    <tr>\n      <td>0xa8D974288Fe44ACC329D7d7a179707D27Ec4dd1c</td>\n      <td>0xc9f52540976385A84BF416903e1Ca3983c539E34</td>\n      <td>50tBTC-50WETH</td>\n      <td>0.536536</td>\n      <td>9740.400000</td>\n      <td>10.000000</td>\n    </tr>\n    <tr>\n      <td>0xacE0D479040231e3c6b17479cFd4444182d521d4</td>\n      <td>0x567ECfCB22205D279BB8Eed3E066989902bF03D5</td>\n      <td>DOLA/bbaUSD-BPT</td>\n      <td>0.373075</td>\n      <td>8378.690542</td>\n      <td>8.601998</td>\n    </tr>\n    <tr>\n      <td>0x80aed5C5C683FEC86817C98da334DD72424E7297</td>\n      <td>0x45C4D1376943Ab28802B995aCfFC04903Eb5223f</td>\n      <td>wstETH-bb-a-WETH-BPT</td>\n      <td>0.274307</td>\n      <td>5782.392536</td>\n      <td>5.936504</td>\n    </tr>\n    <tr>\n      <td>0xc4b6cc9A444337b1Cb8cBbDD9de4d983f609C391</td>\n      <td>0x542F16DA0efB162D20bF4358EfA095B70A100f9E</td>\n      <td>2BTC</td>\n      <td>0.266953</td>\n      <td>6767.787488</td>\n      <td>6.948162</td>\n    </tr>\n    <tr>\n      <td>0x25869f277f474FA9459F40F5D4cB0D6A8Ab41967</td>\n      <td>0x8bc65Eed474D1A00555825c91FeAb6A8255C2107</td>\n      <td>DOLA/USDC BPT</td>\n      <td>0.213185</td>\n      <td>4952.481726</td>\n      <td>5.084475</td>\n    </tr>\n    <tr>\n      <td>0x0EDF6cDd81BC3471C053341B7D8Dfd1Cb367AD93</td>\n      <td>0xb3028Ca124B80CFE6E9CA57B70eF2F0CCC41eBd4</td>\n      <td>50MAGIC-50USDC</td>\n      <td>0.209722</td>\n      <td>5763.719810</td>\n      <td>5.917334</td>\n    </tr>\n    <tr>\n      <td>0x4944b07977A42C15c6a06CF4e204e24c60564104</td>\n      <td>0xCba9Ff45cfB9cE238AfDE32b0148Eb82CbE63562</td>\n      <td>rETH-bb-a-WETH-BPT</td>\n      <td>0.178266</td>\n      <td>4682.896139</td>\n      <td>4.807704</td>\n    </tr>\n    <tr>\n      <td>0xd758454BDF4Df7Ad85f7538DC9742648EF8e6d0A</td>\n      <td>0x8d333f82e0693f53fA48c40d5D4547142E907e1D</td>\n      <td>80PAL-20OHM</td>\n      <td>0.111315</td>\n      <td>2633.631760</td>\n      <td>2.703823</td>\n    </tr>\n    <tr>\n      <td>0xCe540832f7c790d25345Aa19FB1Db3cfDEA04611</td>\n      <td>0xfA92D9Dd808D0E8D68079BDc7f01E74658E1EF15</td>\n      <td>alETH/rETH-BPT</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <td>0xCe3a024bAF36C91d315722B093928020a4F56622</td>\n      <td>0x00FCD3d55085e998e291a0005cedeCF58aC14c40</td>\n      <td>50STG-50bbaUSD</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <td>0x6ba66967B0723718d616ad5F293c2AE6d7b0FCAE</td>\n      <td>0xCE2Da1D3e5b5e4E1913F9fF65eE029d38682d8b9</td>\n      <td>B-50ACID-50WETH</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <td>0xD2C2b1C0F8Ad6E653eD7064fa7bAd7a22De8B249</td>\n      <td>0x26e5C5e2b48815b59640a1a82ac3C2249188Daf4</td>\n      <td>alETH/wstETH-BPT</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <td>0x8F7a0F9cf545DB78BF5120D3DBea7DE9c6220c10</td>\n      <td>0xa231aEa07Bb5e79aE162f95903806FC5AD65fF11</td>\n      <td>50DFX-50WETH</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <td>0x8204b749B808818DEb7957DbD030ceEA44D1FE18</td>\n      <td>0xD3D5d45f4Edf82ba0dFaf061d230766032a10e07</td>\n      <td>50STG-50bbaUSD</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <td>0xB5044FD339A7b858095324cC3F239C212956C179</td>\n      <td>0x5A7f39435fD9c381e4932fa2047C9a5136A5E3E7</td>\n      <td>wstETH-bb-a-WETH-BPT</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <td>0x54BeFB03BB58687cDE09cd082Bd78410e309D8C7</td>\n      <td>0xEE02583596AEE94ccCB7e8ccd3921d955f17982A</td>\n      <td>bb-a-USD</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <td>0xBc771929359B1A6386801705e8D185205d8f1CBF</td>\n      <td>0xbBF9d705b75F408CFCaEE91dA32966124d2c6F7D</td>\n      <td>DOLA/bbaUSD-BPT</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n  </tbody>\n</table>"
+      "text/html": "<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th>gaugeAddress</th>\n      <th>pool</th>\n      <th>symbol</th>\n      <th>voteWeight</th>\n      <th>distribution</th>\n      <th>distributionInPercent</th>\n      <th>boost</th>\n      <th>capOverride</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>0xDf464348c4EC2Bf0e5D6926b9f707c8e02301adf</td>\n      <td>0x36bf227d6BaC96e2aB1EbB5492ECec69C691943f</td>\n      <td>B-wstETH-WETH-Stable</td>\n      <td>0.966584</td>\n      <td>19060.911967</td>\n      <td>19.568921</td>\n      <td>1.75%</td>\n      <td>20%</td>\n    </tr>\n    <tr>\n      <td>0x8135d6AbFd42707A87A7b94c5CFA3529f9b432AD</td>\n      <td>0x32dF62dc3aEd2cD6224193052Ce665DC18165841</td>\n      <td>RDNT-WETH</td>\n      <td>0.934983</td>\n      <td>9740.400000</td>\n      <td>10.000000</td>\n      <td>1.5%</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x175407b4710b5A1cB67a37C76859F17fb2ff6672</td>\n      <td>0xc7FA3A3527435720f0e2a4c1378335324dd4F9b3</td>\n      <td>55auraBal-45wsteth</td>\n      <td>0.796273</td>\n      <td>9740.400000</td>\n      <td>10.000000</td>\n      <td>1%</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x9ab40B6e1330Ce70B9e07cD691f281c1539944E6</td>\n      <td>0xc6EeE8cb7643eC2F05F46d569e9eC8EF8b41b389</td>\n      <td>bb-a-USD</td>\n      <td>0.697010</td>\n      <td>9740.400000</td>\n      <td>10.000000</td>\n      <td>1%</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0xb12ADA23eE766bd6b596E2bE556ea2046758b87c</td>\n      <td>0xBe0f30217BE1e981aDD883848D0773A86d2d2CD4</td>\n      <td>rETH-bb-a-WETH-BPT</td>\n      <td>0.583391</td>\n      <td>9740.400000</td>\n      <td>10.000000</td>\n      <td>1%</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0xa8D974288Fe44ACC329D7d7a179707D27Ec4dd1c</td>\n      <td>0xc9f52540976385A84BF416903e1Ca3983c539E34</td>\n      <td>50tBTC-50WETH</td>\n      <td>0.536536</td>\n      <td>9740.400000</td>\n      <td>10.000000</td>\n      <td>1%</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0xacE0D479040231e3c6b17479cFd4444182d521d4</td>\n      <td>0x567ECfCB22205D279BB8Eed3E066989902bF03D5</td>\n      <td>DOLA/bbaUSD-BPT</td>\n      <td>0.373075</td>\n      <td>6618.142150</td>\n      <td>6.794528</td>\n      <td>1.75%</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x80aed5C5C683FEC86817C98da334DD72424E7297</td>\n      <td>0x45C4D1376943Ab28802B995aCfFC04903Eb5223f</td>\n      <td>wstETH-bb-a-WETH-BPT</td>\n      <td>0.274307</td>\n      <td>4774.137971</td>\n      <td>4.901378</td>\n      <td>1%</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0xc4b6cc9A444337b1Cb8cBbDD9de4d983f609C391</td>\n      <td>0x542F16DA0efB162D20bF4358EfA095B70A100f9E</td>\n      <td>2BTC</td>\n      <td>0.266953</td>\n      <td>4934.947620</td>\n      <td>5.066473</td>\n      <td>1%</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x25869f277f474FA9459F40F5D4cB0D6A8Ab41967</td>\n      <td>0x8bc65Eed474D1A00555825c91FeAb6A8255C2107</td>\n      <td>DOLA/USDC BPT</td>\n      <td>0.213185</td>\n      <td>3808.267648</td>\n      <td>3.909765</td>\n      <td>1%</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x0EDF6cDd81BC3471C053341B7D8Dfd1Cb367AD93</td>\n      <td>0xb3028Ca124B80CFE6E9CA57B70eF2F0CCC41eBd4</td>\n      <td>50MAGIC-50USDC</td>\n      <td>0.209722</td>\n      <td>4188.565700</td>\n      <td>4.300199</td>\n      <td>1%</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x4944b07977A42C15c6a06CF4e204e24c60564104</td>\n      <td>0xCba9Ff45cfB9cE238AfDE32b0148Eb82CbE63562</td>\n      <td>rETH-bb-a-WETH-BPT</td>\n      <td>0.178266</td>\n      <td>3321.068123</td>\n      <td>3.409581</td>\n      <td>1.75%</td>\n      <td>20%</td>\n    </tr>\n    <tr>\n      <td>0xd758454BDF4Df7Ad85f7538DC9742648EF8e6d0A</td>\n      <td>0x8d333f82e0693f53fA48c40d5D4547142E907e1D</td>\n      <td>80PAL-20OHM</td>\n      <td>0.111315</td>\n      <td>1995.958821</td>\n      <td>2.049155</td>\n      <td>1%</td>\n      <td>10%</td>\n    </tr>\n  </tbody>\n</table>"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -123,25 +114,34 @@
    "source": [
     "from IPython.core.display import HTML\n",
     "import pandas as pd\n",
+    "\n",
     "ARBITRUM_TO_DISTRIBUTE = 97404\n",
     "VOTE_CAP_IN_PERCENT = 10  # 10% cap on any single gauge\n",
-    "VOTE_CAP = VOTE_CAP_IN_PERCENT / 100 * ARBITRUM_TO_DISTRIBUTE\n",
+    "VOTE_CAPS_IN_PERCENTS = {gauge_addr: cap_override_data.get(gauge_addr, VOTE_CAP_IN_PERCENT) for gauge_addr in\n",
+    "                         arb_gauges.keys()}\n",
+    "# Custom gauge caps taken from boost data\n",
+    "VOTE_CAPS = {gauge_addr: VOTE_CAPS_IN_PERCENTS[gauge_addr] / 100 * ARBITRUM_TO_DISTRIBUTE for gauge_addr in\n",
+    "             arb_gauges.keys()}\n",
+    "\n",
     "# Calculate total weight\n",
     "total_weight = sum([gauge['voteWeight'] for gauge in arb_gauges.values()])\n",
     "arb_gauge_distributions = {}\n",
     "for gauge_addr, gauge_data in arb_gauges.items():\n",
     "    # Calculate distribution based on vote weight and total weight\n",
     "    to_distribute = ARBITRUM_TO_DISTRIBUTE * gauge_data['voteWeight'] / total_weight\n",
-    "    # Cap distribution at 10%\n",
-    "    to_distribute = to_distribute if to_distribute < VOTE_CAP else VOTE_CAP\n",
+    "    # Cap distribution\n",
+    "    to_distribute = to_distribute if to_distribute < VOTE_CAPS[gauge_addr] else VOTE_CAPS[gauge_addr]\n",
     "    arb_gauge_distributions[gauge_addr] = {\n",
     "        'gaugeAddress': gauge_addr,\n",
     "        'pool': gauge_data['pool'],\n",
     "        'symbol': gauge_data['symbol'],\n",
     "        'voteWeight': gauge_data['voteWeight'],\n",
-    "        'distribution': to_distribute if to_distribute < VOTE_CAP else VOTE_CAP,\n",
-    "        'distributionInPercent': to_distribute / ARBITRUM_TO_DISTRIBUTE * 100\n",
+    "        'distribution': to_distribute if to_distribute < VOTE_CAPS[gauge_addr] else VOTE_CAPS[gauge_addr],\n",
+    "        'distributionInPercent': to_distribute / ARBITRUM_TO_DISTRIBUTE * 100,\n",
+    "        'boost': f\"{boost_data.get(gauge_addr, 1)}%\",\n",
+    "        'capOverride': f\"{cap_override_data.get(gauge_addr, VOTE_CAP_IN_PERCENT)}%\"\n",
     "    }\n",
+    "\n",
     "\n",
     "# Spend unspent arb on the gauges that are not capped yet\n",
     "def recur_distribute_unspend_arb():\n",
@@ -150,24 +150,33 @@
     "        # Find out total voting weight of uncapped gauges and mark it as 100%:\n",
     "        total_uncapped_weight = sum(\n",
     "            [g['voteWeight'] for g in [\n",
-    "                gauge for gauge in arb_gauge_distributions.values() if gauge['distribution'] < VOTE_CAP]\n",
+    "                gauge for addr, gauge in arb_gauge_distributions.items() if gauge['distribution'] < VOTE_CAPS[addr]]\n",
     "             ]\n",
     "        )\n",
     "        # Iterate over uncapped gauges and distribute unspent arb proportionally to their voting weight which is total uncapped weight\n",
-    "        for uncap_gauge in [gauge for gauge in arb_gauge_distributions.values() if gauge['distribution'] < VOTE_CAP]:\n",
+    "        for a, uncap_gauge in {addr: gauge for addr, gauge in arb_gauge_distributions.items() if\n",
+    "                               gauge['distribution'] < VOTE_CAPS[addr]}.items():\n",
     "            # For each loop calculate unspend arb\n",
-    "            unspent_arb = ARBITRUM_TO_DISTRIBUTE - sum([gauge['distribution'] for gauge in arb_gauge_distributions.values()])\n",
+    "            unspent_arb = ARBITRUM_TO_DISTRIBUTE - sum(\n",
+    "                [gauge['distribution'] for gauge in arb_gauge_distributions.values()])\n",
     "            # Don't distribute more than vote cap\n",
-    "            distribution = min(uncap_gauge['distribution'] + unspent_arb * uncap_gauge['voteWeight'] / total_uncapped_weight, VOTE_CAP)\n",
+    "            distribution = min(\n",
+    "                uncap_gauge['distribution'] + unspent_arb * uncap_gauge['voteWeight'] / total_uncapped_weight,\n",
+    "                VOTE_CAPS[a])\n",
     "            uncap_gauge['distribution'] = distribution\n",
     "            uncap_gauge['distributionInPercent'] = uncap_gauge['distribution'] / ARBITRUM_TO_DISTRIBUTE * 100\n",
     "    # Call recursively if there is still unspent arb\n",
     "    if ARBITRUM_TO_DISTRIBUTE - sum([g['distribution'] for g in arb_gauge_distributions.values()]) > 0:\n",
     "        recur_distribute_unspend_arb()\n",
     "\n",
+    "\n",
     "recur_distribute_unspend_arb()\n",
-    "print(f\"Unspent arb: {ARBITRUM_TO_DISTRIBUTE - sum([gauge['distribution'] for gauge in arb_gauge_distributions.values()])}\")\n",
+    "print(\n",
+    "    f\"Unspent arb: {ARBITRUM_TO_DISTRIBUTE - sum([gauge['distribution'] for gauge in arb_gauge_distributions.values()])}\")\n",
     "print(f\"Arb distributed: {sum([gauge['distribution'] for gauge in arb_gauge_distributions.values()])}\")\n",
+    "# Remove arb gauges with 0 distribution\n",
+    "arb_gauge_distributions = {addr: gauge for addr, gauge in arb_gauge_distributions.items() if\n",
+    "                           gauge['distribution'] > 0}\n",
     "arb_gauge_distributions_df = pd.DataFrame.from_dict(arb_gauge_distributions, orient='index')\n",
     "arb_gauge_distributions_df = arb_gauge_distributions_df.sort_values(by='voteWeight', ascending=False)\n",
     "display(HTML(arb_gauge_distributions_df.to_html(index=False)))"
@@ -175,8 +184,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-28T11:45:32.295580Z",
-     "start_time": "2023-07-28T11:45:32.283498Z"
+     "end_time": "2023-07-28T12:12:16.016420Z",
+     "start_time": "2023-07-28T12:12:16.004866Z"
     }
    }
   }
