feat: export data to json

--- a/notebooks/arb_distribution.ipynb
+++ b/notebooks/arb_distribution.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
    "outputs": [],
    "source": [
     "import json\n",
@@ -76,8 +76,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-28T12:13:23.966371Z",
-     "start_time": "2023-07-28T12:13:17.883851Z"
+     "end_time": "2023-07-28T12:15:49.625155Z",
+     "start_time": "2023-07-28T12:15:43.562950Z"
     }
    }
   },
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
    "outputs": [
     {
      "name": "stdout",
@@ -184,8 +184,34 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-28T12:13:23.990095Z",
-     "start_time": "2023-07-28T12:13:23.964905Z"
+     "end_time": "2023-07-28T12:15:49.649980Z",
+     "start_time": "2023-07-28T12:15:49.642786Z"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Export to json"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "outputs": [],
+   "source": [
+    "# Export to json\n",
+    "with open('../data/arbitrumGaugeDistribution.json', 'w') as f:\n",
+    "    json.dump(arb_gauge_distributions, f, indent=4)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-07-28T12:15:49.669347Z",
+     "start_time": "2023-07-28T12:15:49.647361Z"
     }
    }
   }
